# Lab3_3sem

./: README.md  Test.cpp  Vector.cpp  Vector.h
Part1/Dialog/: CMakeLists.txt  Dialog.cpp  Dialog.h  main.cpp
Part1/Lib/: Vector.cpp  Vector.h
Part1/Tests/: CMakeLists.txt  Test.cpp
Part2/dialog/: Dialog.cpp  main.cpp
Part2/lib/: Vector.cpp  Vector.h
Part2/tests/: Test.cpp
Part3/Dialog/: Dialog.cpp  Dialog.h  main.cpp
Part3/Lib/: Vector3.cpp  Vector3.h
Part3/Tests/: Test.cpp
